--- a/platform/android/gradle/dependencies.gradle
+++ b/platform/android/gradle/dependencies.gradle
@@ -10,6 +10,7 @@ ext {
             mapboxServices  : '4.3.0',
             mapboxTelemetry : '4.3.0',
             mapboxGestures  : '0.4.0',
+            mapboxAccounts  : '0.1.0',
             supportLib      : '27.1.1',
             constraintLayout: '1.1.2',
             uiAutomator     : '2.1.3',
@@ -38,6 +39,7 @@ ext {
             mapboxJavaGeoJSON      : "com.mapbox.mapboxsdk:mapbox-sdk-geojson:${versions.mapboxServices}",
             mapboxAndroidTelemetry : "com.mapbox.mapboxsdk:mapbox-android-telemetry:${versions.mapboxTelemetry}",
             mapboxAndroidGestures  : "com.mapbox.mapboxsdk:mapbox-android-gestures:${versions.mapboxGestures}",
+            mapboxAndroidAccounts  : "com.mapbox.mapboxsdk:mapbox-android-accounts:${versions.mapboxAccounts}",
             mapboxJavaTurf         : "com.mapbox.mapboxsdk:mapbox-sdk-turf:${versions.mapboxServices}",
 
             junit                  : "junit:junit:${versions.junit}",
